sudoku_frontend/src/components/board/SudokuBoard.css
.sudoku-overlay {
    position: relative;
}

.sudoku-board {
    border-collapse: collapse; 
    margin: 20px;
    display: flex;
    align-items: center;
    flex-direction: column;
    transition: filter 0.01s ease-in-out;
}

/* Blur the board when paused*/
.sudoku-board.blur {
    filter: blur(7px); 
    pointer-events: none; 
}

.pause-icon {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 2;
}

.pause-icon {
    pointer-events: none;
}

.sudoku-cell {
    width: 50px;
    height: 50px;
    text-align: center;
    vertical-align: middle; 
    color:black;
    font-size: 25px;
    font-weight: bold;
    border: 1px solid #ccc;
    box-sizing: border-box;
    cursor: pointer;
    outline: none;
    background-color: #fff;
}

.sudoku-cell.editable {
    background-color: #f9f9ff;
    color: rgb(0, 119, 158);
}

.sudoku-cell.hint {
    background-color: #f9f9ff;
    color: rgb(0, 176, 82);
}

.sudoku-cell-note.editable {
    background-color: #f9f9ff;
    color: #ED6C02;
}

/* Theme for incorrect cell */
.sudoku-cell-incorrect {
    animation: blink 1s infinite;
    background-color: #f8d7da;
    color: #dc3545 !important;
}

@keyframes blink {
    50% {
        background-color: #f5c6cb;
    }
}

.sudoku-cell:focus {
    border: 2pt solid #007bff;
    /* box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); */
}

/* Borders for 3x3 sub-grids (9x9 Sudoku board) */
.sub-cell-3:nth-child(3n) {
    border-right: 3.5px solid black;
}

.sub-row-3:nth-child(3n) .sudoku-cell {
    border-bottom: 3.5px solid black;
}

.sub-cell-3:first-child {
    border-left: 3.5px solid black;
}

.sub-row-3:first-child .sudoku-cell {
    border-top: 3.5px solid black;
}

/* Borders for 2x2 sub-grids (4x4 Sudoku board) */
.sub-cell-2:nth-child(2n) {
    border-right: 3.5px solid black;
}

.sub-row-2:nth-child(2n) .sudoku-cell {
    border-bottom: 3.5px solid black;
}

.sub-cell-2:first-child {
    border-left: 3.5px solid black;
}

.sub-row-2:first-child .sudoku-cell {
    border-top: 3.5px solid black;
}

